# Avito-Test-Task

./: .gitignore  docker-compose.yml  pyproject.toml
db/: create_tables.sql
pvz_app/: .env.template  main.py
pvz_app/api/: __init__.py
pvz_app/api/api_v1/: __init__.py  auth.py  pvz.py
pvz_app/auth/: auth.py  helpers.py  utils.py  validation.py
pvz_app/core/: config.py  db_helper.py  tables_names.py
pvz_app/core/schemas/: auth.py  pvz.py  users.py
pvz_app/crud/: base.py  pvz.py  users.py
pvz_app/pvz/: utils.py
